Selesai: - Login dan register untuk user pelamar dan perusahaan sudah bisa - navigation bottom untuk user pelamar dan perusahaan sudah bisa berbeda menu antar ke 2 user - homepage sudah bisa untuk ke 2 user
Progress:
- navigation bottom untuk ke 2 user belum bisa mengarah ke fragment yang dituju baru bisa berbeda menu dan warna ketika di klik
- menambahkan lowongan pekerjaan baru di user perusahaan sudah selesai layout dan sudah bisa masuk ke firebase, namun belum bisa tampil di beranda pelamar
- layout dan backend untuk profil user perusahaan masih progress
- layout dan backend untuk fitur cari di user pelamar masih progress (karna data belum bisa tampil di beranda pelamar)
- detail lowongan kerja di user pelamar masih progress (karna data belum bisa tampil di beranda pelamar)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Project"
         tools:targetApi="31">
-        <activity
-            android:name=".MainActivityTambahLowongan"
-            android:exported="false" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -107,15 +105,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".MainActivityProfilPelamar"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
         <activity
             android:name=".MainActivityStatusSeleksiPelamar"
             android:exported="true">
@@ -125,6 +115,28 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".ActivityAddLow"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".DetailLowPelamarActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
+
+
 
 </manifest>
