--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,9 +15,12 @@
         android:theme="@style/Theme.Project"
         tools:targetApi="31">
         <activity
-            android:name=".UbahDataDiriPerusahaanActivity"
-            android:exported="false" />
-
+            android:name=".DataProfilePerusahaanActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".TentangPelamarActivity"
             android:exported="true">
@@ -25,7 +28,6 @@
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".ProfilPerusahaanActivity"
             android:exported="true">
@@ -33,7 +35,6 @@
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".ProfilPelamarActivity"
             android:exported="true">
@@ -41,7 +42,6 @@
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".ActivityAddLow"
             android:exported="true">
@@ -49,7 +49,6 @@
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".DetailLowPelamarActivity"
             android:exported="true">
@@ -57,16 +56,15 @@
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".MainActivityHomepage"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -74,8 +72,6 @@
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
         </activity>
-
-
         <activity
             android:name=".MainActivitySiginPelamar"
             android:exported="true">
@@ -83,7 +79,6 @@
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".MainActivitySiginPerusahaan"
             android:exported="true">
@@ -91,7 +86,6 @@
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".MainActivityBerandaPelamar"
             android:exported="true">
@@ -99,7 +93,6 @@
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".MainActivityBerandaPerusahaan"
             android:exported="true">
@@ -107,7 +100,6 @@
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".MainActivitySigupPelamar"
             android:exported="true">
@@ -115,7 +107,6 @@
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".MainActivitySigupPerusahaan"
             android:exported="true">
@@ -123,7 +114,6 @@
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".MainActivityDetailLowBukaPel"
             android:exported="true">
@@ -131,7 +121,6 @@
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".MainActivityDetailLowTutupPel"
             android:exported="true">
@@ -139,7 +128,6 @@
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".MainActivityStatusSeleksiPelamar"
             android:exported="true">
@@ -147,7 +135,6 @@
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
         </activity>
-
     </application>
 
 </manifest>
